--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <nav>
     <div class="logo">Air Algérie Virtual</div>
     <ul>
-      <li><a href="https://pfairalgerie.github.io/mainloggedin/">Home</a></li>
+      <li><a href="https://pfairalgerie.github.io/main/">Home</a></li>
       <li><a href="https://pfairalgerie.github.io/rules/">Server's Rules</a></li>
      </ul>
   </nav>
